[gd_scene load_steps=3 format=3 uid="uid://can4va6bym0o3"]

[ext_resource type="Script" path="res://scenes/menu/subject_option/subject_option.gd" id="1_ibm55"]
[ext_resource type="Texture2D" uid="uid://dyg7majdjx3l8" path="res://sprites/gear.svg" id="2_etrrw"]

[node name="SubjectOption" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_ibm55")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SubjectButton" type="Button" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Subject"

[node name="ConfigButton" type="Button" parent="Container"]
layout_mode = 2
icon = ExtResource("2_etrrw")

[connection signal="pressed" from="Container/SubjectButton" to="." method="change_to_play_scene"]
[connection signal="pressed" from="Container/ConfigButton" to="." method="change_to_config_scene"]
